--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 appsettings.json
+*.db
+*.db-shm
+*.db-wal
 
 # User-specific files
 *.rsuser
