--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.68",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.1",
+    "axios": "^0.21.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
